Refactor run script, add profiling